moved .gitignor added props into pom files
added few test classes
moved .propeties files
moved testng xml files