@@ -9,7 +9,7 @@ import java.util.Map;
 
 public class PagesContainer {
 
-    private Map<String, BasePage> pages;
+    private final Map<String, BasePage> pages;
 
     private BasePage currentPage;
 
@@ -51,7 +51,7 @@ public class PagesContainer {
         }
         Constructor<? extends BasePage> constructor = page.getDeclaredConstructor();
         constructor.setAccessible(true);
-        BasePage p = page.newInstance();
+        BasePage p = page.getDeclaredConstructor().newInstance();
         pages.put(pageName, p);
     }
 
